Fixed Overflow Issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -81,6 +81,7 @@ footer {
 body {
     background-color:white;
     min-width: 1500px;
+    width: 100%;
     overflow: hidden;
 }
 
